data/derived/fa15/progs/unify/prog0821.ml.out
Characters 85-93:
  else [digitsOfInt (n / 10)] @ [n mod 10];;
                                 ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
